RESOLVED FIXED309645
REGRESSION(300558@main): Sometimes referrer is missing after PSON
https://bugs.webkit.org/show_bug.cgi?id=309645
Summary REGRESSION(300558@main): Sometimes referrer is missing after PSON
Ryosuke Niwa
Reported 2026-03-10 22:39:57 PDT
300558@main introduced a regression. That commit made `ProvisionalPageProxy` copy the previous main frame's `effectiveReferrerPolicy` when creating the new main frame during PSON. This caused the opener's no-referrer policy to persist through cross-origin navigations indefinitely, rather than being reset on each process swap. As a result, once you visit a page with no-referrer policy, we end up inheriting that policy across multiple PSON transitions.
Attachments
Ryosuke Niwa
Comment 1 2026-03-10 22:40:23 PDT
Ryosuke Niwa
Comment 2 2026-03-10 22:53:03 PDT
roberto_rodriguez2
Comment 3 2026-03-12 23:17:07 PDT
EWS
Comment 4 2026-03-17 00:34:22 PDT
Committed 309382@main (42cc8781b1c3): <https://commits.webkit.org/309382@main> Reviewed commits have been landed. Closing PR #60539 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.