REGRESSION(300558@main): Sometimes referrer is missing after PSON https://bugs.webkit.org/show_bug.cgi?id=309645 <rdar://169006635>

Reviewed by NOBODY (OOPS!).

When a page with `Referrer-Policy: no-referrer` opens a new window, the `no-referrer` policy
incorrectly persists across cross-origin navigations in the new window, even though each new
document should start with the default referrer policy. This causes authentication failures
in some websites because the Referer header is stripped from subsequent navigation requests.

300558@main changed `ProvisionalPageProxy` to copy `effectiveReferrerPolicy` when creating
a new main frame during PSON (process-swap on navigation). Before this commit, the new frame
got `ReferrerPolicy::EmptyString` (the default).

This PR fixes the bug by changing the line 133 in `ProvisionalPageProxy.cpp` by replacing
`previousMainFrame->effectiveReferrerPolicy()` with `ReferrerPolicy::EmptyString` so that it
resets the referrer policy when navigating a main frame.

The analysis and test co-authored with Claude AI.

Test: http/tests/referrer-policy/no-referrer/cross-origin-navigation-does-not-inherit-referrer-policy.html

* LayoutTests/http/tests/referrer-policy/no-referrer/cross-origin-navigation-does-not-inherit-referrer-policy-expected.txt: Added.
* LayoutTests/http/tests/referrer-policy/no-referrer/cross-origin-navigation-does-not-inherit-referrer-policy.html: Added.
* LayoutTests/http/tests/referrer-policy/no-referrer/resources/check-referrer-policy-not-inherited.html: Added.
* LayoutTests/http/tests/referrer-policy/no-referrer/resources/navigate-back-cross-origin.html: Added.
* LayoutTests/http/tests/referrer-policy/no-referrer/resources/navigate-cross-origin.html: Added.
* Source/WebKit/UIProcess/ProvisionalPageProxy.cpp:
(WebKit::ProvisionalPageProxy::ProvisionalPageProxy):